# verra_scrape

./: .gitignore  README.md  clean.py  csv_ragged.py  download.py  pyproject.toml
.github/workflows/: verra-sync.yml
data/: latest.csv
data/archive/: verra_2025-03-25.csv  verra_2025-03-26.csv  verra_2025-04-02.csv  verra_2025-04-09.csv  verra_2025-04-16.csv  verra_2025-04-23.csv
logs/: latest_log.txt
scripts/: run_pipeline.py
verra/: cleaner.py  config.py  differ.py  downloader.py  utils.py
